Bug 358291 - Top-level application entries missing from menu structure (only categories shown at top level)
Summary: Top-level application entries missing from menu structure (only categories sh...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: 5.5.3
Platform: ROSA RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
: 385498 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-21 04:58 UTC by Pulfer
Modified: 2018-01-17 09:34 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Missing separator and "Install & Remove Software" application entry (742.88 KB, image/png)
2016-01-21 05:00 UTC, Pulfer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pulfer 2016-01-21 04:58:32 UTC
Kicker applications model is incomplete. There are missing entries at root level. See the attached screenshot (kicker VS kmenuedit). Looks like Kicker's RootModel adds only categories, ignoring applications and separators.

Reproducible: Always
Comment 1 Pulfer 2016-01-21 05:00:08 UTC
Created attachment 96761 [details]
Missing separator and "Install & Remove Software" application entry
Comment 2 Alexander Mentyu 2017-08-28 10:52:53 UTC
Confirming - separator and application under it aren't displayed in top level -same in Kickoff.

Distribution: KDE neon Developer Edition Unstable Branches
KDE Plasma Version: 5.10.90
KDE Frameworks Version: 5.37.0
Qt Version: 5.9.1
Kernel Version: 4.10.0-32-generic
Comment 3 magist3r 2017-11-08 22:04:04 UTC
*** Bug 385498 has been marked as a duplicate of this bug. ***
Comment 4 magist3r 2017-11-08 22:05:11 UTC
Can confirm this.
Comment 5 Christoph Feck 2017-11-24 00:35:45 UTC
https://phabricator.kde.org/D8816
Comment 6 Eike Hein 2018-01-17 09:34:40 UTC
Git commit 6108ce125bef67c161b774fd5d95978370d957c9 by Eike Hein, on behalf of Sergei Lopatin.
Committed on 17/01/2018 at 09:34.
Pushed by hein into branch 'master'.

Show root items in kicker menu

Summary:

For some reason kicker appsmodel ignores root items (apps and separators). This patch added support for them.

Reviewers: #plasma, hein

Reviewed By: #plasma, hein

Subscribers: davidedmundson, ngraham, hein, mart, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D8816

M  +54   -0    applets/kicker/plugin/appsmodel.cpp
M  +6    -0    applets/kicker/plugin/appsmodel.h
M  +4    -0    applets/kicker/plugin/rootmodel.cpp

https://commits.kde.org/plasma-desktop/6108ce125bef67c161b774fd5d95978370d957c9