Show root items in kicker menu

Summary:
BUG: 358291

For some reason kicker appsmodel ignores root items (apps and separators). This patch added support for them.

Reviewers: #plasma, hein

Reviewed By: #plasma, hein

Subscribers: davidedmundson, ngraham, hein, mart, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D8816